--- a/hotels.html
+++ b/hotels.html
@@ -13,11 +13,11 @@
     <header class="container">
       <nav class="menu-navigator container clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
       <ul>
-        <li><a href="#">Информация</a></li>
+        <li><a class="active-page" href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
         <li><a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
         <li class="menu-maps"><a href="#">Карта штата</a></li>
-        <li class="menu-hotels"><a href="hotels.html">Гостиницы</a></li>
+        <li class="menu-hotels"><a href="hotels.html" class="menu-active">Гостиницы</a></li>
       </ul>
     </nav>
     </header>
@@ -87,7 +87,7 @@
         <div class="search-left-size">
           <span class="search-found properties-black-h3">Найдено: 3</span>
           <span class="search-sorting">Сортировка:</span>
-          <a href="#" class="search-select search-price">По цене</a>
+          <a href="#" class="search-select search-price menu-active-blue">По цене</a>
           <a href="#" class="search-select search-type">По типу</a>
           <a href="#" class="search-select search-rating">По рейтингу</a>
         </div>
@@ -95,7 +95,7 @@
           <a class="search-up" href="#">
             <!-- <img src="img/corner-up-gray.png"> -->
           </a>
-          <a class="search-down" href="#">
+          <a class="search-down menu-active-down" href="#">
             <!-- <img src="img/corner-down-gray.png"> -->
           </a>
         </div>
