--- a/index.html
+++ b/index.html
@@ -9,207 +9,208 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
+
 <body>
- <div class="shadow"><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
-  <header class="container">
-    <nav class="menu-navigator container clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
-      <ul>
-        <li><a href="#">Информация</a></li>
-        <li><a href="#">Фото и видео</a></li>
-        <li><a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a></li>
-        <li class="menu-maps"><a href="#">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="container">
-    <div class="card"><!--======***БЛОК С ФОТОГРАФИЕЙ Welcome***======-->
-      <figure class="card-welcome-sedona">
-        <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
-        <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
-      </figure>
-    </div>
-    <section class="about container"><!--======***БЛОК С ОПИСАНИЕМ СЕДОНЫ***======-->
-      <div class="align">
-        <h3 class="about-1 properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
-        <h4 class="about-2 properties-black-h4">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h4>
+  <div class="shadow"><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
+    <header class="container">
+      <nav class="menu-navigator container clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
+        <ul>
+          <li><a class="menu-active" href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a></li>
+          <li class="menu-maps"><a href="#">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <div class="card"><!--======***БЛОК С ФОТОГРАФИЕЙ Welcome***======-->
+        <figure class="card-welcome-sedona">
+          <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
+          <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
+        </figure>
       </div>
-    </section>
-    <section class="city container clearfix"><!--======***БЛОК НАСТОЯЩИЙ ГОРОДОК С ФОТО***======-->
-      <div class="city-description">
-        <h3 class="city properties-white-h3">
-          <span class="city-description-name">Настоящий городок</span>
-        </h3>
-        <p class="properties-white-h4">- №1 -</p>
-        <p class="city-life properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-      </div>
-      <div class="city-sedona">
-        <!-- <img src="" alt="Седона"> -->
-      </div>
-    </section>
-    <section class="pluses-1 container clearfix"><!--======***БЛОК - ЖИЛЬЕ, ЕДА, СУВЕНИРЫ***======-->
-      <div class="pluses-block-1">
-        <img src="img/house.png" alt="house">
-        <h3 class="properties-black-h3">Жилье</h3>
-        <p class="pluses-p pluses-block-motel properties-black-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-      </div>
-      <div class="pluses-block-1">
-        <img src="img/hamburger.png" alt="hamburger">
-        <h3 class="properties-black-h3">Еда</h3>
-        <p class="pluses-p pluses-block-about properties-black-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-      </div>
-      <div class="pluses-block-1">
-        <img src="img/present.png" alt="present">
-        <h3 class="properties-black-h3">Сувениры</h3>
-        <p class="pluses-p pluses-block-about properties-black-h4">Не только китайского, но и местного производства!</p>
-      </div>
-    </section>
-
-    <section class="roсks container clearfix"><!--======***БЛОК - СКАЛЫ, МОСТ ДЬЯВОЛА***======-->
-      <div class="roсks-pic">
-        <!--<img src="img/pic-devil-bridge.jpg" alt="Седона"> -->
-      </div>
-      <div class="roсks-description">
-        <h3 class="properties-white-h3">
-          <span class="roсks-description-name">Там есть<br>мост дьявола</span>
-        </h3>
-        <p class="rocks-p properties-white-h4">- №2 -</p>
-        <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      </div>
-    </section>
-    <section class="pluses-2 container clearfix"><!--======***БЛОК - ПЛОЩАДЬ, ДОРОГА, ТУРИСТЫ***======-->
-      <div class="pluses-block-2">
-        <h3 class="properties-black-h3">
-          <span class="pluses-2-name">Небольшая площадь</span>
-        </h3>
-        <p class="pluses-block-subtitle properties-black-h4">- №3 -</p>
-        <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
-      </div>
-      <div class="pluses-block-2">
-        <h3 class="properties-black-h3">
-          <span class="pluses-2-name">Красивая дорога</span>
-        </h3>
-        <p class="pluses-block-subtitle properties-black-h4">- №4 -</p>
-        <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </div>
-      <div class="pluses-block-2">
-        <h3 class="properties-black-h3">
-          <span class="pluses-2-name">Мало туристов</span>
-        </h3>
-        <p class="pluses-block-subtitle properties-black-h4">- №5 -</p>
-        <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
-      </div>
-    </section>
-    <section class="interest-blok container clearfix"><!--==========******НАЧАЛО БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
-      <div class="align-1">
-        <h2 class="booking-title">Заинтересовались?</h2>
-        <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки,
-        <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      </div>
-    </section>
-
-    <section class="search-form-book"><!--==========******ФОРМА ПОИСКА ГОСТИНИЦЫ******==========-->
-      <div class="modal-content">
-        <div class="search-link-block">
-          <a class="search-link" href="#">Поиск гостиницы в седоне</a>
-        </div>
-        <form class="form-index" method="post" action="/search">
-
-
-          <div class="arrive">
-            <label class="name-date-arr" for="booking-arrive-date">
-              Дата заезда:
-            </label>
-            <div class="big">
-              <input type="text" name="date-of-arrive" value="24 апреля 2017" id="booking-arrive-date">
-
-              <a class="arrdep-cal" href="#">
-                <!-- <img src="img/calendar.png" alt="calendar"> -->
-              </a>
-            </div>
-          </div>
-
-
-          <div class="departure">
-            <label class="name-date-dep" for="booking-departure-date">
-              Дата выезда:
-            </label>
-            <div class="big">
-              <a class="arrdep-cal" href="#">
-                <!-- <img src="img/calendar.png" alt="calendar"> -->
-              </a>
-              <input type="text" name="date-of-departure" value="4 июля 2017" id="booking-departure-date">
-            </div>
-          </div>
-
-
-          <div class="people">
-            <label class="name-date-1">
-              Взрослые:
-            </label>
-            <div class="small">
-
-                <a class="minus" href="#">
-                  <!-- <img src="img/minus.png" alt="minus"> -->
-                </a>
-                <input type="text" id="booking-audit-adult" value="2" required>
-                <a class="plus" href="#">
-                  <!-- <img src="img/plus.png" alt="plus"> -->
-                </a>
-
-            </div>
-          </div>
-
-          <div class="kids">
-            <label class="name-date-2">
-              Дети:
-            </label>
-            <div class="small">
-
-                <a class="minus" href="#">
-                  <!-- <img src="img/minus.png" alt="minus"> -->
-                </a>
-                <input class="small" type="text" id="booking-audit-kids" value="0" required>
-                <a class="plus" href="#">
-                  <!-- <img src="img/plus.png" alt="plus"> -->
-                </a>
-
-            </div>
-          </div>
-
-
-
-          <input class="btn-form" type="button" value="Найти" />
-        </form>
-      </div>
-    </section><!--==========******КОНЕЦ БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
-
-    <section class="map"><!--==========*********БЛОК - ФРЕЙМ С КАРТОЙ******==========-->
-      <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
-      </iframe>
-    </section>
-  </main>
-
-  <footer class="container"><!--==========******БЛОК - ФУТЕР******==========-->
-    <div class="container clearfix">
-      <section class="link-first">
-        <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
-      </section>
-      <section class="link-second">
-        <a class="social-btn social-btn-twitter" href="https://twitter.com">Twitter</a><!-- иконка твиттера png-->
-        <a class="social-btn social-btn-facebook" href="https://www.facebook.com">Facebook</a><!-- иконка контакта png-->
-        <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
-      </section>
-      <section class="link-third">
-          <div class="html-academy">
-          <span class="html-ac">website by </span>
-          <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
-          <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
-          </a>
+      <section class="about container"><!--======***БЛОК С ОПИСАНИЕМ СЕДОНЫ***======-->
+        <div class="align">
+          <h3 class="about-1 properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
+          <h4 class="about-2 properties-black-h4">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h4>
         </div>
       </section>
-    </div>
-  </footer>
-  </div><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
+      <section class="city container clearfix"><!--======***БЛОК НАСТОЯЩИЙ ГОРОДОК С ФОТО***======-->
+        <div class="city-description">
+          <h3 class="city properties-white-h3">
+            <span class="city-description-name">Настоящий городок</span>
+          </h3>
+          <p class="properties-white-h4">- №1 -</p>
+          <p class="city-life properties-white-h4">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </div>
+        <div class="city-sedona">
+          <!-- <img src="" alt="Седона"> -->
+        </div>
+      </section>
+      <section class="pluses-1 container clearfix"><!--======***БЛОК - ЖИЛЬЕ, ЕДА, СУВЕНИРЫ***======-->
+        <div class="pluses-block-1">
+          <img src="img/house.png" alt="house">
+          <h3 class="properties-black-h3">Жилье</h3>
+          <p class="pluses-p pluses-block-motel properties-black-h4">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </div>
+        <div class="pluses-block-1">
+          <img src="img/hamburger.png" alt="hamburger">
+          <h3 class="properties-black-h3">Еда</h3>
+          <p class="pluses-p pluses-block-about properties-black-h4">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </div>
+        <div class="pluses-block-1">
+          <img src="img/present.png" alt="present">
+          <h3 class="properties-black-h3">Сувениры</h3>
+          <p class="pluses-p pluses-block-about properties-black-h4">Не только китайского, но и местного производства!</p>
+        </div>
+      </section>
+
+      <section class="roсks container clearfix"><!--======***БЛОК - СКАЛЫ, МОСТ ДЬЯВОЛА***======-->
+        <div class="roсks-pic">
+          <!--<img src="img/pic-devil-bridge.jpg" alt="Седона"> -->
+        </div>
+        <div class="roсks-description">
+          <h3 class="properties-white-h3">
+            <span class="roсks-description-name">Там есть<br>мост дьявола</span>
+          </h3>
+          <p class="rocks-p properties-white-h4">- №2 -</p>
+          <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </div>
+      </section>
+      <section class="pluses-2 container clearfix"><!--======***БЛОК - ПЛОЩАДЬ, ДОРОГА, ТУРИСТЫ***======-->
+        <div class="pluses-block-2">
+          <h3 class="properties-black-h3">
+            <span class="pluses-2-name">Небольшая площадь</span>
+          </h3>
+          <p class="pluses-block-subtitle properties-black-h4">- №3 -</p>
+          <p class="pluses-block-about properties-black-h4">Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="pluses-block-2">
+          <h3 class="properties-black-h3">
+            <span class="pluses-2-name">Красивая дорога</span>
+          </h3>
+          <p class="pluses-block-subtitle properties-black-h4">- №4 -</p>
+          <p class="pluses-block-about properties-black-h4">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="pluses-block-2">
+          <h3 class="properties-black-h3">
+            <span class="pluses-2-name">Мало туристов</span>
+          </h3>
+          <p class="pluses-block-subtitle properties-black-h4">- №5 -</p>
+          <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
+      </section>
+      <section class="interest-blok container clearfix"><!--==========******НАЧАЛО БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
+        <div class="align-1">
+          <h2 class="booking-title">Заинтересовались?</h2>
+          <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки,
+          <br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        </div>
+      </section>
+
+      <section class="search-form-book"><!--==========******ФОРМА ПОИСКА ГОСТИНИЦЫ******==========-->
+        <div class="modal-content">
+          <div class="search-link-block">
+            <a class="search-link" href="#">Поиск гостиницы в седоне</a>
+          </div>
+          <form class="form-index" method="post" action="/search">
+
+
+            <div class="arrive">
+              <label class="name-date-arr" for="booking-arrive-date">
+                Дата заезда:
+              </label>
+              <div class="big">
+                <input type="text" name="date-of-arrive" value="24 апреля 2017" id="booking-arrive-date">
+
+                <a class="arrdep-cal" href="#">
+                  <!-- <img src="img/calendar.png" alt="calendar"> -->
+                </a>
+              </div>
+            </div>
+
+
+            <div class="departure">
+              <label class="name-date-dep" for="booking-departure-date">
+                Дата выезда:
+              </label>
+              <div class="big">
+                <a class="arrdep-cal" href="#">
+                  <!-- <img src="img/calendar.png" alt="calendar"> -->
+                </a>
+                <input type="text" name="date-of-departure" value="4 июля 2017" id="booking-departure-date">
+              </div>
+            </div>
+
+
+            <div class="people">
+              <label class="name-date-1">
+                Взрослые:
+              </label>
+              <div class="small">
+
+                  <a class="minus" href="#">
+                    <!-- <img src="img/minus.png" alt="minus"> -->
+                  </a>
+                  <input type="text" id="booking-audit-adult" value="2" required>
+                  <a class="plus" href="#">
+                    <!-- <img src="img/plus.png" alt="plus"> -->
+                  </a>
+
+              </div>
+            </div>
+
+            <div class="kids">
+              <label class="name-date-2">
+                Дети:
+              </label>
+              <div class="small">
+
+                  <a class="minus" href="#">
+                    <!-- <img src="img/minus.png" alt="minus"> -->
+                  </a>
+                  <input class="small" type="text" id="booking-audit-kids" value="0" required>
+                  <a class="plus" href="#">
+                    <!-- <img src="img/plus.png" alt="plus"> -->
+                  </a>
+
+              </div>
+            </div>
+
+
+
+            <input class="btn-form" type="button" value="Найти" />
+          </form>
+        </div>
+      </section><!--==========******КОНЕЦ БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
+
+      <section class="map"><!--==========*********БЛОК - ФРЕЙМ С КАРТОЙ******==========-->
+        <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
+        </iframe>
+      </section>
+    </main>
+
+    <footer class="container"><!--==========******БЛОК - ФУТЕР******==========-->
+      <div class="container clearfix">
+        <section class="link-first">
+          <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
+        </section>
+        <section class="link-second">
+          <a class="social-btn social-btn-twitter" href="https://twitter.com">Twitter</a><!-- иконка твиттера png-->
+          <a class="social-btn social-btn-facebook" href="https://www.facebook.com">Facebook</a><!-- иконка контакта png-->
+          <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
+        </section>
+        <section class="link-third">
+            <div class="html-academy">
+            <span class="html-ac">website by </span>
+            <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
+            <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
+            </a>
+          </div>
+        </section>
+      </div>
+    </footer>
+    </div><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
   </body>
 </html>
