--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="pluses-block-2">
           <h3 class="properties-black-h3">
-            <span class="pluses-2-name">Мало туристов</span>
+            <span class="pluses-3-name">Мало туристов</span>
           </h3>
           <p class="pluses-block-subtitle properties-black-h4">- №5 -</p>
           <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
@@ -124,9 +124,9 @@
               <div class="big">
                 <input type="text" name="date-of-arrive" value="24 апреля 2017" id="booking-arrive-date">
 
-                <a class="arrdep-cal" href="#">
+                <button type="button" class="arrdep-cal" href="#">
                   <!-- <img src="img/calendar.png" alt="calendar"> -->
-                </a>
+                </button>
               </div>
             </div>
 
@@ -136,9 +136,9 @@
                 Дата выезда:
               </label>
               <div class="big">
-                <a class="arrdep-cal" href="#">
+                <button type="button" class="arrdep-cal" href="#">
                   <!-- <img src="img/calendar.png" alt="calendar"> -->
-                </a>
+                </button>
                 <input type="text" name="date-of-departure" value="4 июля 2017" id="booking-departure-date">
               </div>
             </div>
@@ -150,13 +150,13 @@
               </label>
               <div class="small">
 
-                  <a class="minus" href="#">
+                  <button type="button" class="minus" href="#">
                     <!-- <img src="img/minus.png" alt="minus"> -->
-                  </a>
+                  </button>
                   <input type="text" id="booking-audit-adult" value="2" required>
-                  <a class="plus" href="#">
+                  <button type="button" class="plus" href="#">
                     <!-- <img src="img/plus.png" alt="plus"> -->
-                  </a>
+                  </button>
 
               </div>
             </div>
@@ -167,13 +167,13 @@
               </label>
               <div class="small">
 
-                  <a class="minus" href="#">
+                  <button type="button" class="minus" href="#">
                     <!-- <img src="img/minus.png" alt="minus"> -->
-                  </a>
+                  </button>
                   <input class="small" type="text" id="booking-audit-kids" value="0" required>
-                  <a class="plus" href="#">
+                  <button type="button" class="plus" href="#">
                     <!-- <img src="img/plus.png" alt="plus"> -->
-                  </a>
+                  </button>
 
               </div>
             </div>
@@ -209,6 +209,7 @@
             </a>
           </div>
         </section>
+
       </div>
     </footer>
     </div><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
