--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
   <div class="shadow"><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
     <header class="container">
       <nav class="menu-navigator container clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
-        <ul>
+        <ul class="left">
           <li><a class="menu-active" href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
-          <li><a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a></li>
-          <li class="menu-maps"><a href="#">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+          <a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a>
+        <ul class="right">
+          <li class="menu-maps left"><a href="#">Карта штата</a></li>
+          <li  class="right"><a href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
     <main class="container">
       <div class="card"><!--======***БЛОК С ФОТОГРАФИЕЙ Welcome***======-->
-        <figure class="card-welcome-sedona">
-          <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
-          <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
-        </figure>
+        <img class="mask" src="img/mask-white.png" alt="Welcome">
+        <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
+        <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
       </div>
       <section class="about container"><!--======***БЛОК С ОПИСАНИЕМ СЕДОНЫ***======-->
         <div class="align">
