--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <div class="shadow"><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
-    <header class="container">
-      <nav class="menu-navigator container clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
+    <header>
+      <nav class="menu-navigator clearfix"><!--==========******БЛОК - МЕНЮ-НАВИГАЦИЯ******==========-->
         <ul class="left">
           <li><a class="menu-active" href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
@@ -25,19 +25,19 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main>
       <div class="card"><!--======***БЛОК С ФОТОГРАФИЕЙ Welcome***======-->
         <img class="mask" src="img/mask-white.png" alt="Welcome">
         <img class="card-welcome" src="img/welcome-text.png" alt="Welcome">
         <img class="card-sedona" src="img/background-1.jpg" alt="Welcome">
       </div>
-      <section class="about container"><!--======***БЛОК С ОПИСАНИЕМ СЕДОНЫ***======-->
+      <section class="about"><!--======***БЛОК С ОПИСАНИЕМ СЕДОНЫ***======-->
         <div class="align">
           <h3 class="about-1 properties-black-h3">Cедона — небольшой городок в аризоне, заслуживающий большего!</h3>
           <h4 class="about-2 properties-black-h4">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h4>
         </div>
       </section>
-      <section class="city container clearfix"><!--======***БЛОК НАСТОЯЩИЙ ГОРОДОК С ФОТО***======-->
+      <section class="city clearfix"><!--======***БЛОК НАСТОЯЩИЙ ГОРОДОК С ФОТО***======-->
         <div class="city-description">
           <h3 class="city properties-white-h3">
             <span class="city-description-name">Настоящий городок</span>
@@ -49,7 +49,7 @@
           <!-- <img src="" alt="Седона"> -->
         </div>
       </section>
-      <section class="pluses-1 container clearfix"><!--======***БЛОК - ЖИЛЬЕ, ЕДА, СУВЕНИРЫ***======-->
+      <section class="pluses-1 clearfix"><!--======***БЛОК - ЖИЛЬЕ, ЕДА, СУВЕНИРЫ***======-->
         <div class="pluses-block-1">
           <img src="img/house.png" alt="house">
           <h3 class="properties-black-h3">Жилье</h3>
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <section class="roсks container clearfix"><!--======***БЛОК - СКАЛЫ, МОСТ ДЬЯВОЛА***======-->
+      <section class="roсks clearfix"><!--======***БЛОК - СКАЛЫ, МОСТ ДЬЯВОЛА***======-->
         <div class="roсks-pic">
           <!--<img src="img/pic-devil-bridge.jpg" alt="Седона"> -->
         </div>
@@ -79,7 +79,7 @@
           <p class="properties-white-h4">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
       </section>
-      <section class="pluses-2 container clearfix"><!--======***БЛОК - ПЛОЩАДЬ, ДОРОГА, ТУРИСТЫ***======-->
+      <section class="pluses-2 clearfix"><!--======***БЛОК - ПЛОЩАДЬ, ДОРОГА, ТУРИСТЫ***======-->
         <div class="pluses-block-2">
           <h3 class="properties-black-h3">
             <span class="pluses-2-name">Небольшая площадь</span>
@@ -102,7 +102,7 @@
           <p class="pluses-block-about properties-black-h4">Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
-      <section class="interest-blok container clearfix"><!--==========******НАЧАЛО БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
+      <section class="interest-blok clearfix"><!--==========******НАЧАЛО БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
         <div class="align-1">
           <h2 class="booking-title">Заинтересовались?</h2>
           <p class="booking-info properties-black-h4">Укажите предполагаемые даты поездки,
@@ -125,7 +125,7 @@
               <div class="big">
                 <input type="text" name="date-of-arrive" value="24 апреля 2017" id="booking-arrive-date">
 
-                <button type="button" class="arrdep-cal" href="#">
+                <button type="button" class="arrdep-cal">
                   <!-- <img src="img/calendar.png" alt="calendar"> -->
                 </button>
               </div>
@@ -137,7 +137,7 @@
                 Дата выезда:
               </label>
               <div class="big">
-                <button type="button" class="arrdep-cal" href="#">
+                <button type="button" class="arrdep-cal">
                   <!-- <img src="img/calendar.png" alt="calendar"> -->
                 </button>
                 <input type="text" name="date-of-departure" value="4 июля 2017" id="booking-departure-date">
@@ -151,11 +151,11 @@
               </label>
               <div class="small">
 
-                  <button type="button" class="minus" href="#">
+                  <button type="button" class="minus">
                     <!-- <img src="img/minus.png" alt="minus"> -->
                   </button>
                   <input type="text" id="booking-audit-adult" value="2" required>
-                  <button type="button" class="plus" href="#">
+                  <button type="button" class="plus">
                     <!-- <img src="img/plus.png" alt="plus"> -->
                   </button>
 
@@ -167,52 +167,46 @@
                 Дети:
               </label>
               <div class="small">
-
-                  <button type="button" class="minus" href="#">
-                    <!-- <img src="img/minus.png" alt="minus"> -->
-                  </button>
-                  <input class="small" type="text" id="booking-audit-kids" value="0" required>
-                  <button type="button" class="plus" href="#">
-                    <!-- <img src="img/plus.png" alt="plus"> -->
-                  </button>
-
+                <button type="button" class="minus">
+                  <!-- <img src="img/minus.png" alt="minus"> -->
+                </button>
+                <input class="small" type="text" id="booking-audit-kids" value="0" required>
+                <button type="button" class="plus">
+                  <!-- <img src="img/plus.png" alt="plus"> -->
+                </button>
               </div>
             </div>
-
-
-
             <input class="btn-form" type="button" value="Найти" />
           </form>
         </div>
       </section><!--==========******КОНЕЦ БЛОКА - ПОИСКА И БРОНИ ГОСТИНИЦЫ******==========-->
 
       <section class="map"><!--==========*********БЛОК - ФРЕЙМ С КАРТОЙ******==========-->
-        <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.180521662296!2d-111.83024383534357!3d34.85437335639766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2s!4v1493279104759" allowfullscreen>
         </iframe>
       </section>
     </main>
 
-    <footer class="container"><!--==========******БЛОК - ФУТЕР******==========-->
-      <div class="container clearfix">
-        <section class="link-first">
-          <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
-        </section>
-        <section class="link-second">
-          <a class="social-btn social-btn-twitter" href="https://twitter.com">Twitter</a><!-- иконка твиттера png-->
-          <a class="social-btn social-btn-facebook" href="https://www.facebook.com">Facebook</a><!-- иконка контакта png-->
-          <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
-        </section>
-        <section class="link-third">
+      <footer><!--==========******БЛОК - ФУТЕР******==========-->
+        <div class="clearfix">
+          <section class="link-first">
+            <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
+          </section>
+          <section class="link-second">
+            <a class="social-btn social-btn-twitter" href="https://twitter.com">Twitter</a><!-- иконка твиттера png-->
+            <a class="social-btn social-btn-facebook" href="https://www.facebook.com">Facebook</a><!-- иконка контакта png-->
+            <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
+          </section>
+          <section class="link-third">
             <div class="html-academy">
-            <span class="html-ac">website by </span>
-            <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
-            <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
-            </a>
-          </div>
-        </section>
-
-      </div>
-    </footer>
+              <span class="html-ac">website by </span>
+              <a class="html-ac-pic" href="https://htmlacademy.ru/intensive/htmlcss">
+              <!-- <img class="html-im" src="img/html-academy-1.png" alt="HTMLacademy"> -->
+              </a>
+            </div>
+          </section>
+        </div>
+      </footer>
     </div><!--==========******БЛОК - ТЕНЬ ВОКРУГ СТРАНИЦЫ******==========-->
-  </body>
+</body>
 </html>
