--- a/hotels.html
+++ b/hotels.html
@@ -115,10 +115,10 @@
           </div>
           <div class="found-about clearfix">
             <div class="found-houses-type">
-              <p class="found-houses-type properties-black-h4">Гостиница</p>
+              <span class="found-houses-type properties-black-h4">Гостиница</span>
             </div>
             <div class="found-houses-price">
-              <p class="found-about-price properties-black-h4">от 4000 р.</p>
+              <span class="found-about-price properties-black-h4">от 4000 р.</span>
             </div>
           </div>
           <div class="found-button clearfix">
@@ -152,10 +152,10 @@
           </div>
           <div class="found-about clearfix">
             <div class="found-houses-type">
-              <p class="found-houses-type properties-black-h4">Мотель</p>
+              <span class="found-houses-type properties-black-h4">Мотель</span>
             </div>
             <div class="found-houses-price">
-              <p class="found-about-price properties-black-h4">от 3000 р.</p>
+              <span class="found-about-price properties-black-h4">от 3000 р.</span>
             </div>
           </div>
           <div class="found-button clearfix">
@@ -190,10 +190,10 @@
         </div>
         <div class="found-about clearfix">
           <div class="found-houses-type">
-            <p class="found-houses-type properties-black-h4">Апартаменты</p>
+            <span class="found-houses-type properties-black-h4">Апартаменты</span>
           </div>
           <div class="found-houses-price">
-            <p class="found-about-price properties-black-h4">от 2000 р.</p>
+            <span class="found-about-price properties-black-h4">от 2000 р.</span>
           </div>
           </div>
           <div class="found-button clearfix">
@@ -217,7 +217,7 @@
     </div><!--==========******КОНЕЦ С ОТЕЛЕМ VILLAS AT POCO******==========-->
 
   </main>
-      <footer class="hotels"><!--==========******БЛОК - ФУТЕР******==========-->
+      <footer><!--==========******БЛОК - ФУТЕР******==========-->
         <div class="clearfix">
           <section class="link-first">
             <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
