--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
             <div class="arrive">
-              <label class="name-date-arr" for="booking-arrive-date">
+              <label class="name-date-arr" for="date-of-arrive">
                 Дата заезда:
               </label>
               <div class="big">
@@ -133,7 +133,7 @@
 
 
             <div class="departure">
-              <label class="name-date-dep" for="booking-departure-date">
+              <label class="name-date-dep" for="date-of-departure">
                 Дата выезда:
               </label>
               <div class="big">
@@ -146,7 +146,7 @@
 
 
             <div class="people">
-              <label class="name-date-1">
+              <label class="name-date-1" for="audit-adult">
                 Взрослые:
               </label>
               <div class="small">
@@ -154,7 +154,7 @@
                   <button type="button" class="minus">
                     <!-- <img src="img/minus.png" alt="minus"> -->
                   </button>
-                  <input type="text" id="booking-audit-adult" value="2" required>
+                  <input type="text" name="audit-adult" id="booking-audit-adult" value="2" required>
                   <button type="button" class="plus">
                     <!-- <img src="img/plus.png" alt="plus"> -->
                   </button>
@@ -163,14 +163,14 @@
             </div>
 
             <div class="kids">
-              <label class="name-date-2">
+              <label class="name-date-2" for="audit-kids">
                 Дети:
               </label>
               <div class="small">
                 <button type="button" class="minus">
                   <!-- <img src="img/minus.png" alt="minus"> -->
                 </button>
-                <input class="small" type="text" id="booking-audit-kids" value="0" required>
+                <input class="small" type="text" name="audit-kids" id="booking-audit-kids" value="0" required>
                 <button type="button" class="plus">
                   <!-- <img src="img/plus.png" alt="plus"> -->
                 </button>
